# tree-sitter-bicep

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test_outline.bicep  test_outline.js  tree-sitter.json
bicep/: grammar.js
bicep/queries/: highlights.scm  indents.scm
bicep/src/: grammar.json  node-types.json  parser.c  scanner.c
bicep/test/corpus/: declarations-and-literals.txt  resources-and-expressions.txt  tests.txt
bicep_params/: grammar.js
bicep_params/queries/: highlights.scm  locals.scm
bicep_params/src/: grammar.json  node-types.json  parser.c  scanner.c
bicep_params/test/corpus/: tests.txt
bindings/go/: binding.go  binding_bicep_params.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bicep/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBicepTests/: TreeSitterBicepTests.swift
common/: define-grammar.js  scanner.h
queries/: highlights.scm  locals.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations-and-literals.txt  resources-and-expressions.txt  tests.txt
