[package]
name = "tree-sitter-bicep"
description = "Bicep and Bicep parameter grammars for tree-sitter"
version = "1.1.0"
authors = [
  "Amaan Qureshi <amaanq12@gmail.com>",
  "Jerome Brown <Jerome@SoliDeoGloria.tech>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bicep"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/oWretch/tree-sitter-bicep"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "common",
  "bindings/rust",
  "bicep/grammar.js",
  "bicep/src",
  "bicep_params/grammar.js",
  "bicep_params/src",
  "queries/*",
  "./tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.24"
